コードのクリーンアップ

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="feedbackIcon" class="hidden"></div>
-    <div id="longPressIndicator" class="hidden">
-    </div>
     <div id="currentTimer">
         <div class="label-row">
             <div class="timer-label work-label active" id="workLabel">work</div>
@@ -21,7 +18,7 @@
         </div>
         <div class="timer-row">
             <div id="workTimeDisplay">00:00</div>
-            <div id="currentPomodoroCount" tabindex="0" style="cursor: pointer;"></div>
+            <div id="currentPomodoroCount"></div>
             <div id="restTimeDisplay">00:00</div>
         </div>
         <div id="totalTimeDisplay">00:00 0️⃣ 00:00</div>
