--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
         <div></div>
     </div>
     <script src="script.js"></script>
+    <footer>
+        <p><a href="https://github.com/ARiAmoniROM/pomodoro-scramble/blob/main/README.md" target="_blank" rel="noopener noreferrer">readme</a></p>
+    </footer>
 </body>
 </html>
