10回目の作業時間を履歴へ追加

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div id="restTimeDisplay"></div>
         </div>
         <div id="totalTimeDisplay">
-            <span class="rest-time">00:00</span>
-            <span id="totalPomodoroCountEmoji">0️⃣</span>
-            <span class="work-time">00:00</span>
+            <span class="rest-time"></span>
+            <span id="totalPomodoroCountEmoji"></span>
+            <span class="work-time"></span>
         </div>
     </div>
     <div id="historyContainer">
